<resources>
    <string name="app_name">BuzzDine</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logo">logo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="buzzdine">BuzzDine</string>
    <string name="login">LOGIN</string>
    <string name="back">BACK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="setting">SETTINGS</string>
    <string name="save">SAVE</string>
    <string name="TextInputLayout">TextInputLayout</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="ConfirmEmailAddress">ConfirmEmailAddress</string>
    <string name="Register">Register</string>
    <string name="ip">"192.168.1.101"</string>

</resources>