<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#B3A36B"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-45dp">

    <Button
        android:id="@+id/signup_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/plate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_back"/>

    <TextView
        android:id="@+id/signup_word"
        android:layout_width="189dp"
        android:layout_height="62dp"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo" />

    <TextView
        android:id="@+id/signup_username_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/username"
        android:textColor="#B3A36B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_word" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/rectangle"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_word" />

    <TextView
        android:id="@+id/signup_email_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/email"
        android:textColor="#B3A36B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/rectangle"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_word" />


    <TextView
        android:id="@+id/signup_password_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/password"
        android:textColor="#B3A36B"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="298dp"
        android:layout_height="51dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/rectangle"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_word" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#B3A36B"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

</androidx.constraintlayout.widget.ConstraintLayout>

